--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "mgurrapucustomer/import",
     "description": "Magento 2 Import Customer From External File",
     "type": "magento2-module",
+    "version": "1.1.2",
     "require": {
         "php": "~8.1.0||~8.2.0"
     },
