--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,10 @@
         }
     ],
     "require": {
-        "php": "~8.1.0||~8.2.0",
-        "gmruduramai/mgurrapucustomerimport":"*"
+        "php": "~8.1.0||~8.2.0"
     },
     "type": "magento2-module",
-    "version": "1.1.6",
+    "version": "1.1.5",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
